# memtag

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: recollect-demo.sh
examples/vault/: deploy-api-production.md  deploy-api-staging.md  python-preference-agent-guess.md  python-preference-old.md  untagged-meeting-notes.md  user-prefs.md
src/memtag/: __init__.py  cli.py  gc.py  lint.py  models.py  pack.py  parser.py  trust.py  vault.py
tests/: test_cli.py  test_gc.py  test_lint.py  test_pack.py  test_parser.py  test_trust.py  test_vault.py
