[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memtag"
version = "0.1.0"
description = "Markdown memory hygiene for agent wikis — trust, decay, and context packing for Obsidian vaults"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Cobus Greyling" }]
keywords = ["ai", "agents", "memory", "obsidian", "markdown", "wiki", "context-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
memtag = "memtag.cli:main"

[project.urls]
Homepage = "https://github.com/cobusgreyling/memtag"
Repository = "https://github.com/cobusgreyling/memtag"
Issues = "https://github.com/cobusgreyling/memtag/issues"

[tool.hatch.build.targets.wheel]
packages = ["memtag"]

[tool.hatch.build.targets.wheel.force-include]
"src/memtag" = "memtag"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]